# github-actions-python-tp

./: LICENSE  pyproject.toml
.github/workflow/: python-tests.yml
tests/: test_app.py
