[tool.poetry]
name = "github-actions-python-tp"
version = "0.1.0"
description = ""
authors = ["Denis Desreumaux"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
